Refactored go code

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run dev",
     "dev": "webpack-dev-server --hot --colors --port 3000",
     "build": "webpack",
-    "go": "go build -o dist/server src/cmd/main.go",
+    "go": "go build -o dist/server src/cmd/*.go",
     "server": "cd dist && ./server",
     "prod": "webpack -p",
     "analyse": "elm-analyse -s -p 3001 -o"
